# muscli

./: .gitignore  CMakeLists.txt  README.md  SDL  SDL.c  main.c  main.cpp  mainau.cpp
lib/pkgconfig/: taglib.pc
