cmake_minimum_required(VERSION 3.0.0)
project(muscli)

include(CTest)
enable_testing()

add_executable(muscli sdl.c)
target_include_directories(muscli PRIVATE ${CMAKE_SOURCE_DIR}/include/)
target_link_directories(muscli PRIVATE ${CMAKE_SOURCE_DIR}/lib/)
target_link_libraries(muscli -lmingw32)
target_link_libraries(muscli -lSDL2main)
target_link_libraries(muscli -lSDL2_mixer)
target_link_libraries(muscli -lSDL2)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)